Feat : PathFinder 유효성 검사